--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>portfolio-fe</title>
+    <meta name="description" content="Portfolio of Wahyudi Alfurqon - Frontend Developer & UI/UX Designer. Specializing in React, Tailwind CSS, and Interactive Web Experiences." />
+    <title>Wahyudi Alfurqon | Frontend Developer</title>
   </head>
   <body>
     <div id="root"></div>
